vlib/v/checker/tests/unwrapped_option_infix.out
vlib/v/checker/tests/unwrapped_option_infix.vv:5:9: error: `?string` cannot be used as `string`, unwrap the option first
    3 | }
    4 |
    5 | println(test() == '')
      |         ~~~~~~
